# CodexBar

./: .gitignore  LICENSE  README.md
KDE Plasma/: codexbar.json
KDE Plasma/org.codexbar.widget/: README.md  metadata.json
KDE Plasma/org.codexbar.widget.plasma5/: README.md  metadata.json
KDE Plasma/org.codexbar.widget.plasma5/contents/config/: config.qml  main.xml
KDE Plasma/org.codexbar.widget.plasma5/contents/ui/: configGeneral.qml  main.qml
KDE Plasma/org.codexbar.widget/contents/ui/: configGeneral.qml  main.qml
KDE Plasma/rust/: Cargo.toml
KDE Plasma/rust/crates/codexbar-cli/: Cargo.toml
KDE Plasma/rust/crates/codexbar-cli/src/: main.rs
KDE Plasma/rust/crates/codexbar-core/: Cargo.toml
KDE Plasma/rust/crates/codexbar-core/src/: lib.rs
KDE Plasma/rust/crates/codexbar-kde-bridge/: Cargo.toml
KDE Plasma/rust/crates/codexbar-kde-bridge/src/: lib.rs
KDE Plasma/rust/crates/codexbar-service/: Cargo.toml
KDE Plasma/rust/crates/codexbar-service/src/: main.rs
docs/: rust-kde-migration.md
