[workspace]
members = [
    "crates/codexbar-core",
    "crates/codexbar-cli",
    "crates/codexbar-service",
    "crates/codexbar-kde-bridge",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["CodexBar Contributors"]

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
